# Intelligent-Robotics

./: Intelligent Robotics Presentation.pptx  README.md
Assignment 1/assignment1/: CMakeLists.txt  README.md  package.xml
Assignment 1/assignment1/include/: NarrowCorridorControlLaw.h  NavigationClient.h  NavigationServer.h  ObstaclesDetector.h
Assignment 1/assignment1/include/util/: Circle.h  Point.h
Assignment 1/assignment1/launch/: tiago_navigation.launch
Assignment 1/assignment1/old/: HierarchicalClustering.cpp  HierarchicalClustering.h  NarrowCorridorControlLaw.cpp  ObstaclesDetector.cpp  prova.launch
Assignment 1/assignment1/src/: NarrowCorridorControlLaw.cpp  NavigationClient.cpp  NavigationServer.cpp  ObstaclesDetector.cpp  main_action_client_node.cpp  main_action_server_node.cpp
Assignment 1/assignment1/src/util/: Point.cpp
Assignment 2/alternative assignment2/assignment2/: CMakeLists.txt  README.md  package.xml
Assignment 2/alternative assignment2/assignment2/include/models/: NavigationModels.h  ObjectsModels.h
Assignment 2/alternative assignment2/assignment2/include/nodes/: NavigationActionClient.h  NavigationActionServer.h  NodeBServiceServer.h  NodeCActionClient.h  NodeCActionServer.h
Assignment 2/alternative assignment2/assignment2/include/operations/: ObjectsDetector.h  ObjectsManipulator.h  ObstaclesDetector.h  TiagoHeadController.h
Assignment 2/alternative assignment2/assignment2/include/util/: ComputerVisionUtils.h  Point.h  PointParser.h  Tree.h
Assignment 2/alternative assignment2/assignment2/launch/: pickup_delivery_routine.launch
Assignment 2/alternative assignment2/assignment2/src/: main_node_C_action_server.cpp
Assignment 2/alternative assignment2/assignment2/src/models/: ObjectsModels.cpp
Assignment 2/alternative assignment2/assignment2/src/nodes/: NavigationActionClient.cpp  NavigationActionServer.cpp  NodeA.cpp  NodeBServiceServer.cpp  NodeCActionClient.cpp  NodeCActionServer.cpp
Assignment 2/alternative assignment2/assignment2/src/operations/: DeliveryTablesDetector.cpp  ObjectsDetector.cpp  ObjectsManipulator.cpp  TiagoHeadController.cpp
Assignment 2/alternative assignment2/assignment2/src/util/: Circle.cpp  ComputerVisionUtils.cpp  PointParser.cpp
Assignment 2/alternative assignment2/assignment2/srv/: detected_objects.srv
Assignment 2/alternative assignment2/custom_msgs/: CMakeLists.txt  package.xml
Assignment 2/alternative assignment2/custom_msgs/action/: ObjectManipulation.action
Assignment 2/alternative assignment2/custom_msgs/srv/: detected_objects.srv
Assignment 2/assignment2/: CMakeLists.txt  README.md  package.xml
Assignment 2/assignment2/action/: Navigation.action  ObjectManipulation.action
Assignment 2/assignment2/include/nodes/: NavigationActionClient.h  NavigationActionServer.h  NodeA.h  NodeBServiceServer.h  NodeCActionClient.h  NodeCActionServer.h
Assignment 2/assignment2/include/operations/: DeliveryTablesDetector.h
Assignment 2/assignment2/include/util/: PointParser.h
Assignment 2/assignment2/msg/: PickUpObject.msg  PickUpObstacle.msg
Assignment 2/assignment2/src/: main_node_A.cpp  main_node_B_service_server.cpp  main_node_navigation_action_server.cpp
Assignment 2/assignment2/src/models/: NavigationModels.cpp
Assignment 2/assignment2/src/nodes/: NavigationActionClient.cpp  NavigationActionServer.cpp  NodeA.cpp  NodeBServiceServer.cpp  NodeCActionClient.cpp  NodeCActionServer.cpp
Assignment 2/assignment2/src/operations/: ObjectsManipulator.cpp  ObstaclesDetector.cpp
Assignment 2/assignment2/src/util/: Point.cpp  PointParser.cpp  Tree.cpp
Assignment 2/assignment2/srv/: detected_objects.srv
Exercise 4/: Group24.txt
Exercise 4/exercise4/: CMakeLists.txt  package.xml
Exercise 4/exercise4/src/: PeoplePositionCalculator.cpp  PeoplePositionCalculator.h  robot_bags_handler.cpp
